--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "testing",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,12 +11,18 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
+    "@reduxjs/toolkit": "^2.3.0",
+    "@tailwindcss/forms": "^0.5.9",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.6",
     "date-fns": "^4.1.0",
-    "lucide-react": "^0.456.0",
+    "lucide-react": "^0.460.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
     "recharts": "^2.13.3"
   },
